--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>DLA software</title>
 </head>
 <body>
+<header style="background-color:rgb(130, 10, 209);color:white">
+    <img src=""style="border-radius:50%"/>
+    <h1>Bem-vindo ao nosso blog</h1>
+</header>
+
+
     
 </body>
 </html>
