fist commit section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>DLA software</title>
 </head>
 <body>
-    
+    <section> <img src="https://picsum.photos/id/#1002/200/300" alt="img"> </section>
 </body>
 </html>
