--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <section> <img src="https://picsum.photos/id/#1002/200/300" alt="img"> </section>
+    <button>Atualizar</button>
 </body>
 </html>
