Mudança nno header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <header style="background-color:rgb(130, 10, 209);color:white">
     <img src=""style="border-radius:50%"/>
-    <h1>Bem-vindo ao nosso blog</h1>
+    <h1>Bem-vindo ao nosso blog.      </h1>
 </header>
 
 
