--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <img src="" style="border-radius:50%" />
         <h1>Bem-vindo ao nosso blog. </h1>
     </header>
-    <section> <img src="https://picsum.photos/id/#1002/200/300" alt="img"> </section>
+    <section>
+        <img src="https://picsum.photos/id/#1002/200/300" alt="img">
+    </section>
     <button>Atualizar</button>
     <div>
         <p>DLA</p>
     </div>
-
-
     <footer>
-        <p>DLA</p>
+        <p>DLA &copy;</p>
     </footer>
 
 </body>
